# urlshortener

./: .gitignore  Cargo.toml  readme.txt
assets/: index.html  retropages.css
src/: main.rs  model.rs  url_shortener.rs
