[package]
name = "urlshortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
serde = { version = "1.0.149", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
sea-query = "0.28.0"
sea-query-rusqlite = "0.2.0"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
